REQ-035: address booking orchestration review findings