@@ -4,7 +4,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.trainticket.bookingorchestration.RequestContextFilter;
 import com.trainticket.bookingorchestration.adapters.messaging.InMemoryEventPublisher;
+import com.trainticket.bookingorchestration.application.BookingOrchestrationService;
+import com.trainticket.bookingorchestration.domain.SegmentBookingEvent;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
@@ -19,18 +22,19 @@ import org.springframework.mock.web.MockHttpServletRequest;
 
 class BookingOrchestrationControllerTest {
 
-    private Clock clock;
     private InMemoryEventPublisher eventPublisher;
+    private BookingOrchestrationService bookingService;
     private BookingOrchestrationController controller;
     private MockHttpServletRequest request;
 
     @BeforeEach
     void setUp() {
-        clock = Clock.fixed(Instant.parse("2026-07-05T10:00:00Z"), ZoneOffset.UTC);
+        Clock clock = Clock.fixed(Instant.parse("2026-07-05T10:00:00Z"), ZoneOffset.UTC);
         eventPublisher = new InMemoryEventPublisher();
-        controller = new BookingOrchestrationController(clock, eventPublisher);
+        bookingService = new BookingOrchestrationService(clock, eventPublisher);
+        controller = new BookingOrchestrationController(bookingService);
         request = new MockHttpServletRequest();
-        request.addHeader("X-Correlation-Id", "corr-" + UUID.randomUUID());
+        request.setAttribute(RequestContextFilter.CORRELATION_ID_HEADER, "corr-" + UUID.randomUUID());
     }
 
     private String createTestSaga() {
@@ -45,6 +49,22 @@ class BookingOrchestrationControllerTest {
         return ((BookingOrchestrationController.StartSagaResponse) resp.getBody()).sagaId();
     }
 
+    private String createConfirmedSegment(String sagaId) {
+        String segmentBookingId = "sb-" + UUID.randomUUID();
+        controller.requestReservation(sagaId,
+            new BookingOrchestrationController.RequestReservationRequest("seg-001", "tvl-user1", segmentBookingId),
+            UUID.randomUUID().toString(), request);
+        bookingService.handleUpstreamEvent(new com.trainticket.bookingorchestration.application.EventEnvelope(
+            "evt-" + UUID.randomUUID(), "ProviderReservationConfirmed", 1, "provider-integration",
+            "evt-" + UUID.randomUUID(), (String) request.getAttribute(RequestContextFilter.CORRELATION_ID_HEADER),
+            Instant.parse("2026-07-05T10:00:01Z"),
+            Map.of("segmentBookingId", segmentBookingId,
+                "providerReference", Map.of("providerId", "provider-1", "reservationId", "res-1", "displayReference", "PNR1"),
+                "normalizedEvidence", "confirmed")));
+        eventPublisher.clear();
+        return segmentBookingId;
+    }
+
     @Test
     void startSagaHappyPath() {
         var req = new BookingOrchestrationController.StartSagaRequest(
@@ -56,7 +76,6 @@ class BookingOrchestrationControllerTest {
 
         ResponseEntity<?> response = controller.startSaga(req, UUID.randomUUID().toString(), request);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertTrue(response.getBody() instanceof BookingOrchestrationController.StartSagaResponse);
         var body = (BookingOrchestrationController.StartSagaResponse) response.getBody();
         assertNotNull(body.sagaId());
         assertTrue(body.sagaId().startsWith("saga-"));
@@ -87,10 +106,22 @@ class BookingOrchestrationControllerTest {
     }
 
     @Test
-    void startSagaValidationFailure() {
-        var req = new BookingOrchestrationController.StartSagaRequest(
-            "", "acc-123", "off-123", List.of(), null);
+    void reusedIdempotencyKeyWithDifferentBodyReturns422() {
+        String idempotencyKey = UUID.randomUUID().toString();
+        var first = new BookingOrchestrationController.StartSagaRequest("ord-1", "acc-1", "off-1", List.of("tvl-1"), List.of("seg-1"));
+        var second = new BookingOrchestrationController.StartSagaRequest("ord-2", "acc-1", "off-1", List.of("tvl-1"), List.of("seg-1"));
+        controller.startSaga(first, idempotencyKey, request);
 
+        var response = controller.handleIdempotencyKeyReused(
+            assertThrowsReused(() -> controller.startSaga(second, idempotencyKey, request)), request);
+
+        assertEquals(HttpStatus.UNPROCESSABLE_ENTITY, response.getStatusCode());
+        assertEquals("IDEMPOTENCY_KEY_REUSED", response.getBody().code());
+    }
+
+    @Test
+    void startSagaValidationFailure() {
+        var req = new BookingOrchestrationController.StartSagaRequest("", "acc-123", "off-123", List.of(), null);
         ResponseEntity<?> response = controller.startSaga(req, UUID.randomUUID().toString(), request);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         var error = (BookingOrchestrationController.ErrorBody) response.getBody();
@@ -99,15 +130,8 @@ class BookingOrchestrationControllerTest {
 
     @Test
     void startSagaRequiresIdempotencyKey() {
-        var req = new BookingOrchestrationController.StartSagaRequest(
-            "ord-0194f2e0-7b3e-7610-0284-5c26e8b0c123",
-            "acc-0194f2e0-7b3e-7610-0284-5c26e8b0c456",
-            "off-0194f2e0-7b3e-7610-0284-5c26e8b0c789",
-            List.of("tvl-user1"),
-            List.of("seg-001"));
-
+        var req = new BookingOrchestrationController.StartSagaRequest("ord-1", "acc-1", "off-1", List.of("tvl-1"), List.of("seg-1"));
         ResponseEntity<?> response = controller.startSaga(req, null, request);
-
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         var error = (BookingOrchestrationController.ErrorBody) response.getBody();
         assertEquals("VALIDATION_FAILED", error.code());
@@ -117,14 +141,9 @@ class BookingOrchestrationControllerTest {
     @Test
     void getSagaReturnsSagaDetail() {
         String sagaId = createTestSaga();
-
         ResponseEntity<?> response = controller.getSaga(sagaId, request);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody() instanceof Map);
-        @SuppressWarnings("unchecked")
-        Map<String, Object> detail = (Map<String, Object>) response.getBody();
-        assertEquals(sagaId, detail.get("sagaId"));
-        assertNotNull(detail.get("steps"));
+        assertTrue(response.getBody() instanceof BookingOrchestrationService.SagaDetail);
     }
 
     @Test
@@ -138,12 +157,8 @@ class BookingOrchestrationControllerTest {
     @Test
     void requestReservationHappyPath() {
         String sagaId = createTestSaga();
-
-        var req = new BookingOrchestrationController.RequestReservationRequest(
-            "seg-001", "tvl-user1", "sb-" + UUID.randomUUID());
-        ResponseEntity<?> response = controller.requestReservation(
-            sagaId, req, UUID.randomUUID().toString(), request);
-
+        var req = new BookingOrchestrationController.RequestReservationRequest("seg-001", "tvl-user1", "sb-" + UUID.randomUUID());
+        ResponseEntity<?> response = controller.requestReservation(sagaId, req, UUID.randomUUID().toString(), request);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         var body = (BookingOrchestrationController.RequestReservationResponse) response.getBody();
         assertEquals("REQUESTED", body.status());
@@ -153,15 +168,11 @@ class BookingOrchestrationControllerTest {
     @Test
     void requestReservationIdempotentReplay() {
         String sagaId = createTestSaga();
-
-        var req = new BookingOrchestrationController.RequestReservationRequest(
-            "seg-001", "tvl-user1", "sb-" + UUID.randomUUID());
+        var req = new BookingOrchestrationController.RequestReservationRequest("seg-001", "tvl-user1", "sb-" + UUID.randomUUID());
         String idempotencyKey = UUID.randomUUID().toString();
-
         ResponseEntity<?> first = controller.requestReservation(sagaId, req, idempotencyKey, request);
         eventPublisher.clear();
         ResponseEntity<?> second = controller.requestReservation(sagaId, req, idempotencyKey, request);
-
         assertEquals(first.getBody(), second.getBody());
         assertEquals(0, eventPublisher.getPublished().size());
     }
@@ -170,8 +181,7 @@ class BookingOrchestrationControllerTest {
     void requestReservationValidationFailure() {
         String sagaId = createTestSaga();
         var req = new BookingOrchestrationController.RequestReservationRequest("", null, "");
-        ResponseEntity<?> response = controller.requestReservation(
-            sagaId, req, UUID.randomUUID().toString(), request);
+        ResponseEntity<?> response = controller.requestReservation(sagaId, req, UUID.randomUUID().toString(), request);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         var error = (BookingOrchestrationController.ErrorBody) response.getBody();
         assertEquals("VALIDATION_FAILED", error.code());
@@ -180,39 +190,38 @@ class BookingOrchestrationControllerTest {
     @Test
     void markTicketedHappyPath() {
         String sagaId = createTestSaga();
+        String segmentBookingId = createConfirmedSegment(sagaId);
 
-        var req = new BookingOrchestrationController.MarkTicketedRequest(
-            "sb-0194f2e0-7b3e-7610-0284-5c26e8b0cabc",
-            "ent-0194f2e0-7b3e-7610-0284-5c26e8b0cdef");
-        ResponseEntity<?> response = controller.markTicketed(
-            sagaId, req, UUID.randomUUID().toString(), request);
+        var req = new BookingOrchestrationController.MarkTicketedRequest(segmentBookingId, "ent-" + UUID.randomUUID());
+        ResponseEntity<?> response = controller.markTicketed(sagaId, req, UUID.randomUUID().toString(), request);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         var body = (BookingOrchestrationController.MarkTicketedResponse) response.getBody();
         assertEquals("TICKETED", body.status());
+        assertTrue(eventPublisher.getPublished().stream().anyMatch(envelope -> envelope.payload() instanceof SegmentBookingEvent.SegmentTicketed));
     }
 
     @Test
-    void markTicketedIdempotentReplay() {
+    void markTicketedEnforcesPreconditionForUnconfirmedBooking() {
         String sagaId = createTestSaga();
+        String segmentBookingId = "sb-" + UUID.randomUUID();
+        controller.requestReservation(sagaId,
+            new BookingOrchestrationController.RequestReservationRequest("seg-001", "tvl-user1", segmentBookingId),
+            UUID.randomUUID().toString(), request);
 
-        var req = new BookingOrchestrationController.MarkTicketedRequest(
-            "sb-0194f2e0-7b3e-7610-0284-5c26e8b0cabc",
-            "ent-0194f2e0-7b3e-7610-0284-5c26e8b0cdef");
-        String idempotencyKey = UUID.randomUUID().toString();
+        var req = new BookingOrchestrationController.MarkTicketedRequest(segmentBookingId, "ent-" + UUID.randomUUID());
+        var response = controller.handlePreconditionFailed(
+            assertThrowsPrecondition(() -> controller.markTicketed(sagaId, req, UUID.randomUUID().toString(), request)), request);
 
-        ResponseEntity<?> first = controller.markTicketed(sagaId, req, idempotencyKey, request);
-        ResponseEntity<?> second = controller.markTicketed(sagaId, req, idempotencyKey, request);
-
-        assertEquals(first.getBody(), second.getBody());
+        assertEquals(HttpStatus.PRECONDITION_FAILED, response.getStatusCode());
+        assertEquals("PRECONDITION_FAILED", response.getBody().code());
     }
 
     @Test
     void markTicketedValidationFailure() {
         String sagaId = createTestSaga();
         var req = new BookingOrchestrationController.MarkTicketedRequest("", "");
-        ResponseEntity<?> response = controller.markTicketed(
-            sagaId, req, UUID.randomUUID().toString(), request);
+        ResponseEntity<?> response = controller.markTicketed(sagaId, req, UUID.randomUUID().toString(), request);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         var error = (BookingOrchestrationController.ErrorBody) response.getBody();
         assertEquals("VALIDATION_FAILED", error.code());
@@ -221,41 +230,60 @@ class BookingOrchestrationControllerTest {
     @Test
     void markTicketedNotFound() {
         var req = new BookingOrchestrationController.MarkTicketedRequest("sb-123", "ent-123");
-        ResponseEntity<?> response = controller.markTicketed(
-            "saga-nonexistent", req, UUID.randomUUID().toString(), request);
+        var response = controller.handleNotFound(
+            assertThrowsNotFound(() -> controller.markTicketed("saga-nonexistent", req, UUID.randomUUID().toString(), request)), request);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-        var error = (BookingOrchestrationController.ErrorBody) response.getBody();
+        var error = response.getBody();
         assertEquals("NOT_FOUND", error.code());
     }
 
     @Test
     void publisherWrapsEventInCorrectEnvelope() {
-        var req = new BookingOrchestrationController.StartSagaRequest(
-            "ord-0194f2e0-7b3e-7610-0284-5c26e8b0c123",
-            "acc-456", "off-789", List.of("tvl-user1"), List.of("seg-001"));
-
+        var req = new BookingOrchestrationController.StartSagaRequest("ord-123", "acc-456", "off-789", List.of("tvl-user1"), List.of("seg-001"));
         controller.startSaga(req, UUID.randomUUID().toString(), request);
-
-        var published = eventPublisher.getPublished();
-        assertTrue(published.size() >= 2);
-        var envelope = published.get(0);
+        var envelope = eventPublisher.getPublished().getFirst();
         assertTrue(envelope.eventId().startsWith("evt-"));
         assertEquals("booking-orchestration", envelope.producer());
         assertEquals(1, envelope.schemaVersion());
-        assertNotNull(envelope.correlationId());
+        assertEquals(request.getAttribute(RequestContextFilter.CORRELATION_ID_HEADER), envelope.correlationId());
         assertNotNull(envelope.occurredAt());
         assertNotNull(envelope.payload());
     }
 
     @Test
-    void errorBodyHasCanonicalShape() {
+    void errorBodyUsesRequestScopedCorrelationId() {
+        request.addHeader(RequestContextFilter.CORRELATION_ID_HEADER, "corr-header");
+        request.setAttribute(RequestContextFilter.CORRELATION_ID_HEADER, "corr-scoped");
         var req = new BookingOrchestrationController.StartSagaRequest(null, null, null, null, null);
         ResponseEntity<?> response = controller.startSaga(req, UUID.randomUUID().toString(), request);
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         var error = (BookingOrchestrationController.ErrorBody) response.getBody();
-        assertEquals("VALIDATION_FAILED", error.code());
-        assertNotNull(error.message());
-        assertNotNull(error.correlationId());
-        assertNotNull(error.details());
+        assertEquals("corr-scoped", error.correlationId());
+    }
+
+    private static BookingOrchestrationService.IdempotencyKeyReusedException assertThrowsReused(Runnable runnable) {
+        try {
+            runnable.run();
+        } catch (BookingOrchestrationService.IdempotencyKeyReusedException ex) {
+            return ex;
+        }
+        throw new AssertionError("expected IdempotencyKeyReusedException");
+    }
+
+    private static BookingOrchestrationService.PreconditionFailedException assertThrowsPrecondition(Runnable runnable) {
+        try {
+            runnable.run();
+        } catch (BookingOrchestrationService.PreconditionFailedException ex) {
+            return ex;
+        }
+        throw new AssertionError("expected PreconditionFailedException");
+    }
+
+    private static BookingOrchestrationService.NotFoundException assertThrowsNotFound(Runnable runnable) {
+        try {
+            runnable.run();
+        } catch (BookingOrchestrationService.NotFoundException ex) {
+            return ex;
+        }
+        throw new AssertionError("expected NotFoundException");
     }
 }
